[package]
name = "sqlx_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite", "migrate", "macros" ] }
tokio = { version = "1.20.0", features = ["full"] }
walkdir = "2.3.2"
chrono = "0.4.19"
